--- a/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/tax-audit/trader-selection/create-working-paper-trader/create-working-paper-trader.component.html
@@ -54,29 +54,25 @@
                             <label>จำนวนเดือนที่ชำระภาษี</label>
                         </div>
                         <div class="two wide field">
-                            <input (keyup)="onKeyUpMin($event, i)" value="" type="number" id="num1{{i}}" name="num1{{i}}" [(ngModel)]="num1[i]" [attr.min]="num2[i-1]+1"
-                                [attr.max]=" num2[i]==0 ? month-1 : num2[i]-1" [attr.required]="true">
+                            <input value="" type="number" id="num1{{i}}" name="num1{{i}}" [(ngModel)]="num1[i]" [attr.required]="true">
                         </div>
                         <div class="one wide field">
                             <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
                         </div>
                         <div class="two wide field">
-                            <input (keyup)="onKeyUpMax($event, i)" value="" type="number" id="num2{{i}}" name="num2{{i}}" [(ngModel)]="num2[i]" [attr.max]="month"
-                                [attr.required]="true">
+                            <input value="" type="number" id="num2{{i}}" name="num2{{i}}" [(ngModel)]="num2[i]" [attr.max]="month" [attr.required]="true">
                         </div>
                         <div class="five wide field">
                             <label>ช่วงร้อยละที่ต้องการแยกกลุ่มข้อมูล</label>
                         </div>
                         <div class="two wide field">
-                            <input type="number" name="percent1{{i}}" id="percent1{{i}}" [(ngModel)]="percent1[i]" [attr.step]="0.01" [attr.max]="percent2[i]-0.01"
-                                [attr.required]="true" value="">
+                            <input type="number" name="percent1{{i}}" id="percent1{{i}}" [(ngModel)]="percent1[i]" [attr.required]="true" value="">
                         </div>
                         <div class="one wide field">
                             <label>&nbsp;&nbsp;&nbsp;ถึง&nbsp;</label>
                         </div>
                         <div class="two wide field">
-                            <input type="number" name="percent2{{i}}" id="percent2{{i}}" [(ngModel)]="percent2[i]" [attr.step]="0.01" [attr.max]="100"
-                                [attr.required]="true" value="">
+                            <input type="number" name="percent2{{i}}" id="percent2{{i}}" [(ngModel)]="percent2[i]" [attr.required]="true" value="">
                         </div>
                         <div class="two wide field">
                             <a (click)="onDelField(i)" *ngIf="i!==0" style="cursor: pointer;color: red">
