--- a/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/internal-audit/int02/int02-3/int02-3.component.html
@@ -10,25 +10,41 @@
       <div class="ui grid">
         <div class="sixteen wide column">
           <label>รายละเอียดแบบสอบทาน (เดิม)</label>
-          <table id="datatable" class="ui small celled table aligned hover">
-            <thead>
-              <tr>
-                <th style="text-align: left !important ;width: 5%">
-                  <input type="checkbox" name="chk1" id="chk1" (click)="chkAll($event, '_table', 1)">
-                </th>
-                <th style="text-align: center !important ;width: 95%">รายการ</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr *ngFor="let t of _table; let i = index">
-                <td>
-                  <input type="checkbox" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="t.qtnReportHdrId" (change)="chck(t.qtnReportManId, 'man', $event, 1, '_table')">
-                  <input type="checkbox" style="margin-left: 2em" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="!t.qtnReportHdrId" (change)="chck(t.qtnReportDtlId, 'dtl', $event, 1, 'table')">
-                </td>
-                <td>{{t.qtnMainDetail}}</td>
-              </tr>
-            </tbody>
-          </table>
+          <div class="dataTables_scroll">
+            <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
+              <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 100%; padding-right: 0px;">
+                <table class="ui small celled table aligned hover dataTable no-footer" role="grid" style="margin-left: 0px; width: 100%;">
+                  <thead>
+                    <tr>
+                      <th style="text-align: left !important ;width: 5%">
+                        <input type="checkbox" name="chk1" id="chk1" (click)="chkAll($event, '_table', 1)">
+                      </th>
+                      <th style="text-align: center !important ;width: 95%">รายการ</th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+            </div>
+            <div class="dataTables_scrollBody" (scroll)="onScroll($event, 'option')" style="position: relative; overflow: auto; max-height: 360px; width: 100%;">
+              <table class="ui small celled table aligned hover dataTable no-footer" id="datatable" role="grid" style="width: 100%;">
+                <thead>
+                  <tr>
+                    <th style="text-align: left !important ;width: 5%;display: none"></th>
+                    <th style="text-align: left !important ;width: 95%;display: none"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let t of _table; let i = index">
+                    <td style="width: 5%;">
+                      <input type="checkbox" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="t.qtnReportHdrId" (change)="chck(t.qtnReportManId, 'man', $event, 1, '_table')">
+                      <input type="checkbox" style="margin-left: 2em" id="chk1-{{i}}" name="chk1-{{i}}" *ngIf="!t.qtnReportHdrId" (change)="chck(t.qtnReportDtlId, 'dtl', $event, 1, '_table')">
+                    </td>
+                    <td style="width: 95%;">{{t.qtnMainDetail}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -90,7 +106,7 @@
       <div class="ui centered grid">
         <div class="sixteen wide column">
           <label>รายละเอียดแบบสอบทาน (ใหม่)</label>
-          <table id="datatable2" class="ui small celled table aligned hover">
+          <!-- <table id="datatable2" class="ui small celled table aligned hover">
             <thead>
               <tr>
                 <th style="text-align: left !important ;width: 5%">
@@ -108,7 +124,42 @@
                 <td>{{t.qtnMainDetail}}</td>
               </tr>
             </tbody>
-          </table>
+          </table> -->
+          <div class="dataTables_scroll">
+            <div class="dataTables_scrollHead" style="overflow: hidden; position: relative; border: 0px; width: 100%;">
+              <div class="dataTables_scrollHeadInner" style="box-sizing: content-box; width: 100%; padding-right: 0px;">
+                <table class="ui small celled table aligned hover dataTable no-footer" role="grid" style="margin-left: 0px; width: 100%;">
+                  <thead>
+                    <tr>
+                      <th style="text-align: left !important ;width: 5%">
+                        <input type="checkbox" name="chk2" id="chk2" (click)="chkAll($event, 'table', 2)">
+                      </th>
+                      <th style="text-align: center !important ;width: 95%">รายการ</th>
+                    </tr>
+                  </thead>
+                </table>
+              </div>
+            </div>
+            <div class="dataTables_scrollBody" (scroll)="onScroll($event, 'option2')" style="position: relative; overflow: auto; max-height: 360px; width: 100%;">
+              <table class="ui small celled table aligned hover dataTable no-footer" id="datatable" role="grid" style="width: 100%;">
+                <thead>
+                  <tr>
+                    <th style="text-align: left !important ;width: 5%;display: none"></th>
+                    <th style="text-align: left !important ;width: 95%;display: none"></th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr *ngFor="let t of table; let i = index">
+                    <td style="width: 5%;">
+                      <input type="checkbox" id="chk2-{{i}}" name="chk2-{{i}}" *ngIf="t.qtnReportHdrId" (change)="chck(t.qtnReportManId, 'man', $event, 2, 'table')">
+                      <input type="checkbox" style="margin-left: 2em" id="chk2-{{i}}" name="chk2-{{i}}" *ngIf="!t.qtnReportHdrId" (change)="chck(t.qtnReportDtlId, 'dtl', $event, 2, 'table')">
+                    </td>
+                    <td style="width: 95%;">{{t.qtnMainDetail}}</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
         <div class="sixteen wide center aligned column">
           <button type="button" (click)="delete()" class="ui red {{ chk2.length==0 ? 'disabled' : ''}} mini button">
